tests/dataset/tpc-ds/compiler/cpp/q88.error
/tmp/TestCPPCompiler_TPCDSQueriesq88977314822/001/prog.cpp:165:19: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  165 | float count_range(auto ssales, auto tdim, int hour, int start_min,
      |                   ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq88977314822/001/prog.cpp:165:32: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  165 | float count_range(auto ssales, auto tdim, int hour, int start_min,
      |                                ^~~~
/usr/bin/ld: /tmp/ccfb6pGI.o: in function `main':
prog.cpp:(.text+0x3a9): undefined reference to `void __json<float>(float const&)'
collect2: error: ld returned 1 exit status
